# Education-ERP-Backend

./: .pre-commit-config.yaml  Procfile  README.md  add_school_fields.py  move_hooks.py  pyproject.toml  update_fixtures.py
archived/sites/edu.local/: site_config.json
archived/sites/edu.local1/: site_config.json
archived/sites/edu.local1/logs/: database.log.3  database.log.4  database.log.6  database.log.7  scheduler.log.1
config/: redis_cache.conf  redis_queue.conf
config/pids/: redis_queue.rdb  temp-12050.rdb  temp-34211.rdb
logs/: database.log.1  database.log.10  database.log.11  database.log.12  database.log.13  database.log.14  database.log.15  database.log.16  database.log.19  database.log.2  database.log.20  database.log.3  database.log.4  database.log.5  database.log.6  database.log.7  database.log.8  database.log.9  frappe.log.1  frappe.log.2  scheduler.log.1
school_erp/: api.py  hooks.py  modules.txt  move_doctypes.py
school_erp/api/: user_management.py
school_erp/fixtures/: custom_docperm.json  custom_field.json  property_setter.json
school_erp/school_erp/: admissions_hooks.py
sites/: apps.json  apps.txt  common_site_config.json
sites/assets/: assets-rtl.json  assets.json  education  erpnext  frappe
sites/edu.local/: site_config.json  touched_tables.json
sites/edu.local/logs/: database.log.1  database.log.10  database.log.11  database.log.12  database.log.13  database.log.14  database.log.2  database.log.3  database.log.4  database.log.5  database.log.6  database.log.7  database.log.8  database.log.9  frappe.log.2  scheduler.log.1
(+67 files in other folders)
