[project]
name = "school_erp"
authors = [
    { name = "Vaishnavi ", email = "vaishupadwal12@gmail.com"}
]
description = "School ERP Customizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
]
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
[tool.bench.dev-dependencies]
[deploy.dependencies.apt]
packages = []
[tool.ruff]
line-length = 110
target-version = "py310"
[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
    "UP030",
    "UP031",
    "UP032",
    "UP037",
    "UP040",
]
typing-modules = ["frappe.types.DF"]
[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
